syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

message HubEventProto {
  string hub_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  oneof payload {
    DeviceAddedEventProto device_added = 3;
    DeviceRemovedEventProto device_removed = 4;
    ScenarioAddedEventProto scenario_added = 5;
    ScenarioRemovedEventProto scenario_removed = 6;
  }
}

enum DeviceTypeProto {
  DEVICE_TYPE_UNKNOWN = 0;
  MOTION_SENSOR = 1;
  TEMPERATURE_SENSOR = 2;
  LIGHT_SENSOR = 3;
  CLIMATE_SENSOR = 4;
  SWITCH_SENSOR = 5;
}

message DeviceAddedEventProto {
  string id = 1;
  DeviceTypeProto type = 2;
}

message DeviceRemovedEventProto {
  string id = 1;
}

enum ConditionTypeProto {
  CONDITION_TYPE_UNKNOWN = 0;
  MOTION = 1;
  LUMINOSITY = 2;
  SWITCH = 3;
  TEMPERATURE = 4;
  CO2LEVEL = 5;
  HUMIDITY = 6;
}

enum ConditionOperationProto {
  CONDITION_OPERATION_UNKNOWN = 0;
  EQUALS = 1;
  GREATER_THAN = 2;
  LOWER_THAN = 3;
}

message ScenarioConditionProto {
  string sensor_id = 1;
  ConditionTypeProto type = 2;
  ConditionOperationProto operation = 3;
  oneof value {
    bool bool_value = 4;
    int32 int_value = 5;
  }
}

enum ActionTypeProto {
  ACTION_TYPE_UNKNOWN = 0;
  ACTIVATE = 1;
  DEACTIVATE = 2;
  INVERSE = 3;
  SET_VALUE = 4;
}

message DeviceActionProto {
  string sensor_id = 1;
  ActionTypeProto type = 2;
  optional int32 value = 3;
}

message ScenarioAddedEventProto {
  string name = 1;
  repeated ScenarioConditionProto conditions = 2;
  repeated DeviceActionProto actions = 3;
}

message ScenarioRemovedEventProto {
  string name = 1;
}