syntax = "proto3";

package telemetry.service.collector;

import "telemetry/messages/hub_event.proto";
import "telemetry/messages/sensor_event.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.collector";

service CollectorController {
  rpc collectSensorEvent(telemetry.message.event.SensorEventProto) returns (google.protobuf.Empty);
  rpc collectHubEvent(telemetry.message.event.HubEventProto) returns (google.protobuf.Empty);
}